added one more experience as freelancing  in my qualification

--- a/src/components/qualification/qualification.module.css
+++ b/src/components/qualification/qualification.module.css
@@ -80,6 +80,9 @@
   .timeline_icon_4 {
     background: #ff0040;
   }
+  .timeline_icon_6 {
+    background: #b9ee4f;
+  }
   
   .timeline_entry_inner {
     position: relative;
