--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -77,8 +77,14 @@
     top: 1.5rem;
     right: 1.5rem;
     font-size: 1.5rem;
-    color: var(--title-color);
+    color: red;
+    background-color: red;
     cursor: pointer;
+    border-radius: 50%;
+}
+.services__modal-close:hover{
+    background-color: rgb(240, 9, 9);
+    color: white;
 }
 
 .services__modal-title,
