--- a/src/components/qualification/qualification.module.css
+++ b/src/components/qualification/qualification.module.css
@@ -1,163 +1,149 @@
-.box {
-    margin: 15px;
-    margin-top: 50px;
-  }
-  .head {
-    display: inline-block;
-    padding: 0px 12px;
-    color: rgb(85, 85, 85);
-    margin-bottom: 20px;
-    margin-left: 30px;
-    letter-spacing: 5px;
-    font-size: 11px;
-  }
-  
-  .container {
-    width: 100%;
-    margin-left: 30px;
-    display: block;
-    margin-top: 30px;
-    border-radius: 3px;
-    padding: 0 42px 0 10px;
-    margin-left: 30px;
-    /* background-color: red; */
-  }
-  .row:before {
-    content: ' ';
-    display: table;
-  }
-  .row:after {
-    clear: both;
-  }
-  .row_md_12 {
-    display: flex;
-    flex-direction: column;
-  }
-  .timeline_centered {
-    z-index: 1;
-    position: relative;
-    margin-bottom: 30px;
-  }
-  .timeline_centered:before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 4px;
-    background: #f3f2f7;
-    top: 20px;
-    z-index: -1;
-    bottom: 20px;
-    margin-left: 19px;
-  }
+.qualification {
+  padding: 60px 0;
+  background: #f9f9f9;
+}
+
+.section__title {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+  color: #111;
+}
+
+.section__subtitle {
+  display: block;
+  text-align: center;
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 3rem;
+}
+
+.timeline {
+  position: relative;
+  max-width: 900px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 4px;
+  background-color: #111;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -2px;
+}
+
+.timeline_entry {
+  padding: 20px 30px;
+  position: relative;
+  width: 50%;
+  box-sizing: border-box;
+}
+
+.timeline_entry.left {
+  left: 0;
+}
+
+.timeline_entry.right {
+  left: 50%;
+}
+
+.timeline_entry::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -13px;
+  background-color: #111;
+  border: 4px solid #fff;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.timeline_entry.right::after {
+  left: -13px;
+}
+
+.timeline_icon {
+  position: absolute;
+  top: 12px;
+  width: 50px;
+  height: 50px;
+  background: #111;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  z-index: 2;
+}
+
+.timeline_entry.left .timeline_icon {
+  right: -75px;
+}
+
+.timeline_entry.right .timeline_icon {
+  left: -75px;
+}
+
+.timeline_content {
+  padding: 20px;
+  background: #fff;
+  position: relative;
+  border-radius: 6px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.timeline_content h3 {
+  margin-top: 0;
+  color: #111;
+}
+
+.timeline_date {
+  font-size: 0.9rem;
+  color: #555;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.timeline_content p {
+  margin: 0;
+  line-height: 1.6;
+  color: #333;
+}
+
+.timeline_content a {
+  color: #111;
+  text-decoration: underline;
+}
+
+.timeline_content a:hover {
+  color: #555;
+}
+
+@media screen and (max-width: 768px) {
   .timeline_entry {
-    margin-bottom: 10px;
-    clear: both;
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
   }
-  .timeline_icon {
-    display: block;
-    width: 40px;
-    font-size: 20px;
-    height: 40px;
-    background-color: #f9bf3f;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    text-align: center;
-    -moz-box-shadow: 0 0 0 5px #f2f3f7;
-    -webkit-box-shadow: 0 0 0 5px #f2f3f7;
-    box-shadow: 0 0 0 5px #f2f3f7;
-    line-height: 35px;
-    float: left;
+
+  .timeline_entry.left,
+  .timeline_entry.right {
+    left: 0;
   }
-  .timeline_icon_2 {
-    background: #de1db4;
+
+  .timeline_entry.left .timeline_icon,
+  .timeline_entry.right .timeline_icon {
+    left: -75px;
   }
-  .timeline_icon_5 {
-    background: #00ffff;
+
+  .timeline::after {
+    left: 31px;
   }
-  
-  .timeline_icon_4 {
-    background: #ff0040;
-  }
-  .timeline_icon_6 {
-    background: #b9ee4f;
-  }
-  
-  .timeline_entry_inner {
-    position: relative;
-    top: 0px;
-    margin-left: 11.5px;
-  }
-  .timeline_icon_3 {
-    display: block;
-    width: 20px;
-    font-size: 20px;
-    height: 20px;
-    background: #fff;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    text-align: center;
-    -moz-box-shadow: 0 0 0 5px #f2f3f7;
-    -webkit-box-shadow: 0 0 0 5px #f2f3f7;
-    box-shadow: 0 0 0 5px #f2f3f7;
-    line-height: 35px;
-    float: left;
-  }
-  
-  .label {
-    position: relative;
-    background: #f2f3f7;
-    padding: 1.5em;
-    margin-left: 60px;
-  }
-  .label h2 {
-    font-size: 20px;
-    font-family: 'Quicksand', Arial, sans-serif;
-    font-weight: 500;
-    margin: 0 0 30px 0;
-    color: #000;
-  }
-  .label h2 span {
-    -webkit-opacity: 0.4;
-    -moz-opacity: 0.4;
-    opacity: 0.4;
-    -ms-filter: alpha(opacity=40);
-    filter: alpha(opacity=40);
-    font-size: 16px;
-  }
-  
-  .label p {
-    margin-bottom: 1.5em;
-  }
-  
-  p > a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  a:hover {
-    color: rgb(121, 189, 252);
-    text-decoration: none;
-  }
-  
-  @keyframes text {
-    from {
-      transform: translateX(-30px);
-      opacity: 0.1;
-    }
-  }
-  
-  @media (max-width: 992px) {
-    .box {
-      text-align: center;
-    }
-  }
-  
-  @media (max-width: 440px) {
-    .container {
-      padding: 0 42px 0 0;
-    }
-  }
+}
